Avoid left horizontal scroll

--- a/src/components/VisualForm/VisualForm.css
+++ b/src/components/VisualForm/VisualForm.css
@@ -11,6 +11,7 @@
 
 .VisualForm__SideContainer__SideForm {
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .VisualForm__SideContainer__SideActions {
